fix: small UI and CV corrections

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,37 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="font-awesome-animation.min.css">
 
+  <script type='application/ld+json'>
+    {
+      "@context": "http://schema.org/",
+      "@type": "Person",
+      "name": "Mickaël Marchal",
+      "familyName": "Marchal",
+      "givenName": "Mickaël",
+      "jobTitle": "Chief Technology Officer (CTO)",
+      "url": "https://mickaelmarchal.com",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://mickaelmarchal.com/mickael_marchal.jpg"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/in/mickaelmarchal/",
+        "https://plus.google.com/+MickaelMarchal",
+        "https://www.instagram.com/mickamarchal/",
+        "https://medium.com/@mickaelmarchal",
+        "https://twitter.com/mickaelmarchal"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "description": "Grand Luxury Hotels est le spécialiste européen du voyage de luxe sur internet : La société propose la réservation de 450 hôtels d'exception à travers le monde.",
+        "name": "Grand Luxury Hotels",
+        "url": "https://www.grandluxuryhotels.com"
+      }
+    }
+  </script>
 </head>
 
-<body itemscope="" itemtype="http://schema.org/Person">
+<body>
 
   <nav class="nav-main">
     <a class="js-nav-menu-btn nav-menu-btn">
@@ -60,9 +88,7 @@
 
   <header class="header" id="js-header">
     <div class="header-title" id="js-header-title">
-      <h1 itemprop="name">
-        <span itemprop="givenName">Mickaël</span>
-        <span itemprop="familyName"></span>Marchal</h1>
+      <h1>Mickaël Marchal</h1>
     </div>
   </header>
 
@@ -77,7 +103,7 @@
           <img src="profile-img.png" class="cv-overview-image" alt="CTO + full stack geek">
         </div>
         <div class="col-md-7">
-          <h1 itemprop="jobTitle">CTO + full stack geek
+          <h1>CTO + full stack geek
             <span class="subtitle">@Grand Luxury Hotels.</span>
           </h1>
           <p>Premier salarié chez
