chore: remove debug

--- a/public/index.html
+++ b/public/index.html
@@ -495,10 +495,10 @@
       navigator.serviceWorker
         .register('/service-worker.js')
         .then(() => {
-          console.log('Service worker registered');
+          // console.log('Service worker registered');
         })
         .catch(err => {
-          console.log('Service worker registration failed: ' + err);
+          // console.log('Service worker registration failed: ' + err);
         });
     }
 
